keycloak/deprecated/ckm-website-frontend-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ckm-website-frontend-ingress
  namespace: production
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - photo.martens.live
      secretName: ckm-certificate-secret
  rules:
    - host: photo.martens.live
      http:
        paths:
          - backend:
              service:
                name: ckm-website-frontend
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
