keycloak/deprecated/keycloak-tls-passthrough.yaml
kind: IngressRouteTCP
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: keycloak-tls-passthrough
  namespace: security
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`iam.martens.live`)
      services:
        - name: keycloak-http
          namespace: security
          port: 8443
  tls:
    passthrough: true
